--- a/package.json
+++ b/package.json
@@ -16,34 +16,20 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.8.7",
-    "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.27.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
-  },
   "dependencies": {
-    "@types/axios": "^0.14.4",
-    "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.3",
-    "@types/ftp": "^0.3.36",
-    "@types/nodemon": "^1.19.6",
-    "axios": "^1.7.7",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.0",
-    "express": "^4.21.1",
-    "express-async-handler": "^1.2.0",
-    "ftp": "^0.3.10",
-    "http-proxy-middleware": "^3.0.3",
-    "http-status-codes": "^2.3.0",
-    "nodemon": "^3.1.7",
-    "pg": "^8.13.1",
-    "ts-node": "^10.9.2",
-    "uuid": "^11.0.2",
+    "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.0",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "drizzle-orm": "^0.37.0",
+    "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.1"
   }
 }
